# advent-of-code-2024

./: Cargo.toml  Makefile
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  main.rs  template.rs
