[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1"
path = "src/day1.rs"

[dependencies]
itertools = "0.12.0"
rayon = "1.8.0"
regex = "1.10.2"
rand = "0.8.4"


[[bin]]
name = "day1"
path = "src/day1.rs"
